src/main/java/org/example/Solid/good/o/OCP_good.java
package org.example.Solid.good.o;

public class OCP_good {
}
