src/main/java/org/example/Solid/bad/o/OCP_bad.java
package org.example.Solid.bad.o;

public class OCP_bad {
}
